// 协议版本：显式声明使用proto3, 否则使用默认的proto2
syntax = "proto3";

// 生成类的包名
option java_package = "com.atom.grpc.api";
// 生成类的文件名，否则默认生成的类名为proto文件名的驼峰命名
option java_outer_classname = "ProductInfoProto";
// 定义的所有消息、枚举和服务生成对应的多个类文件，而不是以内部类的形式出现
option java_multiple_files = true;

//ProductInfo服务定义
service ProductInfoService {
  //添加商品 ,格式为"方法名 请求参数 返回参数"
  rpc addProduct(ProductRequest) returns (ProductId);
  //获取商品详情,格式为"方法名 请求参数 返回参数"
  rpc getProduct(ProductId) returns (ProductResponse);
}

//定义请求参数
message ProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

//定义请求参数
message ProductId {
  string value = 1;
}

//定义返回参数
message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}